# pocl

./: CMakeLists.txt
cmake/: FindPthreads.cmake  LLVM.cmake  bitcode_rules.cmake
examples/example1/: example1.c
examples/example1-spir32/: example1.c
examples/example2/: CMakeLists.txt  example2.c
examples/example2a/: CMakeLists.txt  example2a.c
examples/scalarwave/: CMakeLists.txt  scalarwave.c
examples/trig/: trig.c
fix-include/CL/: cl_platform.h
include/: pocl.h  pocl_device.h
include/CL/: CMakeLists.txt
lib/: CMakeLists.txt
lib/CL/: CMakeLists.txt  clBuildProgram.c  clCreateBuffer.c  clCreateCommandQueue.c  clCreateContext.c  clCreateContextFromType.c  clCreateFromGLTexture2D.c  clCreateFromGLTexture3D.c  clCreateImage.c  clCreateKernel.c  clCreateKernelsInProgram.c  clCreateProgramWithBinary.c  clCreateProgramWithSource.c  clCreateSampler.c  clCreateSubBuffer.c  clCreateUserEvent.c  clEnqueueCopyBuffer.c  clEnqueueCopyBufferToImage.c  clEnqueueCopyImage.c  clEnqueueCopyImageToBuffer.c  clEnqueueFillImage.c  clEnqueueMapBuffer.c  clEnqueueMapBuffer.h  clEnqueueMapImage.c  clEnqueueMarkerWithWaitList.c  clEnqueueNDRangeKernel.c  clEnqueueNativeKernel.c  clEnqueueReadBuffer.c  clEnqueueUnmapMemObject.c  clEnqueueWaitForEvents.c  clEnqueueWriteBuffer.c  clGetMemObjectInfo.c  clGetProgramInfo.c  clGetSamplerInfo.c  clGetSupportedImageFormats.c  clReleaseContext.c  clReleaseMemObject.c  clReleaseProgram.c  clRetainSampler.c  clSetEventCallback.c  (+11 more)
lib/CL/devices/: CMakeLists.txt  common.c  cpuinfo.c  cpuinfo.h  dev_image.h  devices.c  prototypes.inc
lib/CL/devices/basic/: CMakeLists.txt  basic.c
lib/CL/devices/pthread/: CMakeLists.txt  pthread.c
lib/CL/devices/tce/: tce_common.cc
lib/CL/devices/tce/ttasim/: ttasim.cc
lib/CL/devices/topology/: CMakeLists.txt  pocl_topology.h
lib/llvmopencl/: AllocasToEntry.h  AutomaticLocals.cc  Barrier.h  BarrierBlock.cc  BarrierBlock.h  BarrierTailReplication.cc  BarrierTailReplication.h  BreakConstantGEPs.cpp  BreakConstantGEPs.h  CMakeLists.txt  CanonicalizeBarriers.cc  CanonicalizeBarriers.h  DebugHelpers.h  Flatten.cc  GenerateHeader.cc  ImplicitConditionalBarriers.cc  ImplicitConditionalBarriers.h  ImplicitLoopBarriers.cc  Kernel.cc  Kernel.h  LoopBarriers.cc  PHIsToAllocas.h  ParallelRegion.cc  ParallelRegion.h  TargetAddressSpaces.cc  TargetAddressSpaces.h  VariableUniformityAnalysis.cc  VariableUniformityAnalysis.h  WIVectorize.cc  WorkItemAliasAnalysis.cc  Workgroup.cc  Workgroup.h  WorkitemHandler.cc  WorkitemHandler.h  WorkitemLoops.cc  WorkitemLoops.h  WorkitemReplication.cc  WorkitemReplication.h
lib/poclu/: CMakeLists.txt  bswap.c  cl_half.c  misc.c
tests/kernel/: image_query_funcs.c  kernel.c  sampler_address_clamp.c
tests/regression/: CMakeLists.txt  test_constant_array.cpp  test_infinite_loop.cpp  test_setargs.cpp
tests/runtime/: CMakeLists.txt
tests/workgroup/: run_kernel.c
